<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBG"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.Holo.NoActionBar"
    tools:context="com.pikamander2.testhelloworldapp1.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="37dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:onClick="hiraganaButtonPressed"
            android:text="@string/buttonHiragana"
            android:textColor="@color/lightText" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minWidth="120dp"
            android:onClick="katakanaButtonPressed"
            android:text="@string/buttonKatakana"
            android:textColor="@color/lightText" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minWidth="120dp"
            android:onClick="kanjiButtonPressed"
            android:text="@string/buttonKanji"
            android:textColor="@color/lightText" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minWidth="120dp"
            android:onClick="mixtureButtonPressed"
            android:text="@string/buttonMixture"
            android:textColor="@color/lightText" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:text="@string/VersionNumber"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightText" />

    </LinearLayout>

</RelativeLayout>